# knowledge-index

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REQUIREMENTS.md  data-model.md  ingest-cypher.md  install.sh  pyproject.toml  retrieval-queries.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  data-model.md  discussion-vector-indexing.md  general-philosophy.md  get.md  index_rm_behavior.md  ingest-cypher.md  link_capture.md  outline-format.md  profiles-and-vaults.md  requirements.md  requirements_v01_mvp.md  retrieval-queries.md  scoping.md  search.md  skills.md  theme-format.md  theme-queries.md  tree-format.md
docs/archive/: discussion-vector-indexing.md  requirements_v01_mvp.md
docs/archive/v0_3_1_introspect_dedup/: discussion.md
docs/commands/: add-rm.md  get.md  outline.md  search.md  theme-format.md
docs/data-model/: index_rm_behavior.md  ingest-cypher.md  link_capture.md  retrieval-queries.md  schema.md  theme-queries.md
docs/experiments/: graph-reasoning.md
docs/research-data-model/: research-retrieval-queries.md
docs/v0_3_0_semantic_search/: requirements.md
docs/workflow/: discuss.md  release.md  spec.md
references/: neo4j-podman.md
scripts/: deploy-site.sh  gen_test_vault.py  test_vault_corpus.txt  theme_producer.py  upload_test_vault.sh
site/: index.html
skills/ki/: SKILL.md
skills/knowledge-base/: SKILL.md
skills/knowledge-index/: SKILL.md
src/ki/: __init__.py  cli.py  config.py  neo4j_cli.py  neo4j_client.py  neo4j_local.py  neo4j_podman.py  profile_resolve.py  scope.py  status.py  vault.py
src/ki/commands/: add.py  configure.py  drop.py  (+12 more)
tests/integration/: conftest.py  test_add.py  test_directory_flag.py  test_display_text_aliases.py  test_drop.py  test_get.py  test_index.py  test_link_capture.py  test_nuke.py  test_rm.py  test_search.py  test_status.py  test_vault_slug.py
tests/unit/: test_aliases.py  test_batcher.py  test_cli_args.py  test_config.py  test_folder_layer.py  test_gen_test_vault.py  test_get.py  test_ingest_service_unavailable.py  test_neo4j_cli.py  test_neo4j_client.py  test_neo4j_podman.py  test_outline.py  test_parser.py  test_path_property.py  test_profile_list.py  test_profile_resolve.py  test_search.py  test_skill.py  test_slug.py  test_status.py  test_stream_file_bytes.py  test_tree.py  test_vault.py  test_version_in_sync.py
(+40 files in other folders)
